--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,23 @@
 plugins {
     id 'java'
-    id 'application'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'org.fizzbuzz'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-application {
-    mainClass = 'org.fizzbuzz.Main'
-}
-
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
